# FastDSP

./: README.md
FastDSP/: __init__.py
FastDSP/algorithms/: __init__.py  reductions.py
FastDSP/algorithms/cython/: _algorithms.pyx  _cuda_algorithms.pxd  _reductions.pxd  _reductions.pyx  setup_reductions.py
FastDSP/core/: __init__.py  context.py  types.py
FastDSP/core/cython/: _core.c  _core.cpp  _core.pyx  setup.py
FastDSP/structures/: __init__.py  arrays.py  fdsp_types.py
FastDSP/structures/cython/: _cuda_structures.pxd  _data_structures.cpp  _data_structures.pxd  _data_structures.pyx  setup.py
FastDSP/tests/test_algorithms/: test_reductions.py
FastDSP/tests/test_structures/: test_arrays.py
FastDSP/utils/: __init__.py
FastDSP/utils/cython/: _cuda_utils.pxd  _math_utils.pxd  _math_utils.pyx  setup.py
compiled/cpp/: CMakeLists.txt  main.cpp
compiled/cuda/: CMakeLists.txt
compiled/cuda/algorithms/include/: basic_operations.cuh  fft_related.cuh
compiled/cuda/algorithms/include/image_processing/: morphology.cuh  npp_prefixes.hpp
compiled/cuda/algorithms/src/: CMakeLists.txt  fft.cu  reductions.cu
compiled/cuda/algorithms/src/image_processing/: morphology.cu  npp_func_defs.cu
compiled/cuda/core/include/: cuda_helper.h  debugging.cuh  initialization.cuh  macros.h
compiled/cuda/core/src/: CMakeLists.txt  data_types.cu  debugging.cu  initialization.cu
compiled/cuda/structures/include/: data_structures.cuh
compiled/cuda/structures/src/: CMakeLists.txt  arrays.cu
compiled/cuda/utils/include/: math.cuh
compiled/cuda/utils/src/: CMakeLists.txt  arithmetic.cu
docs/examples/: examples.rst
docs/modules/: core.rst  structures.rst
docs/modules/algorithms/: reductions.rst
tools/: load_config.py
tools/cython/: compile.sh
tools/python/: file_manipulation.py
